--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -8,17 +8,22 @@ body{
   width: 100%;
   height: 1000px;
 }
+.navigation-container {
+  position: fixed;
+}
 
 .navigation-background {
+
   width:0;
   height:0;
   border-top: solid yellow 300px;
   border-right: solid transparent 300px;
   border-bottom: solid transparent 300px;
   border-left: solid yellow 300px;
+  transition: 0.8s;
 }
 .navigation-display {
-  position: absolute;
+  position: absolute ;
   top:10px;
   left:30px;
 }
