--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -1,6 +1,3 @@
-body {
-  margin: 0;
-}
 
 .section-intro {
   background-color: black;
@@ -16,20 +13,19 @@ body {
 }
 
 .navigation-background {
-
   width: 0;
   height: 0;
-  border-top: solid #f9ea0b 300px;
+  border-top: solid 	#ffe76e 300px;
   border-right: solid transparent 300px;
   border-bottom: solid transparent 300px;
-  border-left: solid #f9ea0b 300px;
+  border-left: solid #ffe76e 300px;
   transition: 0.7s;
 }
 
 .navigation-display {
   position: absolute;
-  top: 10px;
-  left: 30px;
+  top: 2px;
+  left: 20px;
 }
 
 .navigation-item {
@@ -38,18 +34,9 @@ body {
   position: relative;
   color: black;
   font-size: 45px;
-  font-family: 'Barrio', cursive;
+  font-family: 'Megrim', cursive;
   margin-bottom: 18px;
   cursor: pointer;
-}
-
-#navigation-open-button {
-  background-color: yellow;
-  color: black;
-  padding: 3px;
-  position: absolute;
-  top: 30px;
-  left: 30px;
 }
 
 .close-button-line {
@@ -83,4 +70,7 @@ body {
   top: 10px;
   display: none;
 }
-
+.close-button {
+  margin:0;
+  font-size:30px;
+}
