--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,38 +1,40 @@
 body {
   background-attachment: fixed;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   background-image: url("https://s-media-cache-ak0.pinimg.com/originals/a0/e0/a2/a0e0a24d40014ee6f148dc60029f448c.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   height: 100vh;
 }
+
 .section-intro {
   height: 100vh;
 }
-.section-about-me, .section-projects , .section-skills{
+
+.section-about-me, .section-projects, .section-skills {
   height: 100vh;
   background-color: #e0e0e0;
 }
+
 .section-contact {
   height: 100vh;
-background-color: rgba(0,0,0, 0.8);
- }
+  background-color: rgba(0, 0, 0, 0.8);
+}
 
-
-.section-title{
-  color:black;
+.section-title {
+  color: black;
   font-weight: 100;
   background-color: #ffe76e;
   font-size: 40px;
   font-family: 'Megrim', cursive;
-  margin-top:50px;
+  margin-top: 50px;
   width: 300px;
   text-align: center;
   float: right;
   position: relative;
-  padding-top:5px;
+  padding-top: 5px;
   padding-bottom: 5px;
 }
 
@@ -44,7 +46,7 @@ background-color: rgba(0,0,0, 0.8);
   border-right: solid #ffe76e 29px;
   border-bottom: solid #ffe76e 29px;
   border-left: solid transparent 29px;
-  position:absolute;
-  left:-56px;
-  top:-1px;
+  position: absolute;
+  left: -56px;
+  top: -1px;
 }
