--- a/stylesheets/intro.css
+++ b/stylesheets/intro.css
@@ -1,14 +1,21 @@
 .intro-quote {
   display: inline-block;
   border:solid 3px #ffe76e;
-  margin-left:29%;
-  margin-top:15%;
-  background-color: rgba(0,0,0,0.8);
+  margin-left:30%;
+  margin-top:17%;
+  background-color: rgba(0,0,0,0.4);
 }
 .quote {
   color: #ffe76e;
-  margin:100px;
-  font-size: 50px;
+  margin:5vw;
+  font-size: 3vw;
   font-family: 'Megrim', cursive;
   font-weight: 100;
+}
+
+@media screen and (max-width: 1300px) {
+  .quote {
+    /*font-size: 2vw;*/
+    margin: 4vw;
+  }
 }
