--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,25 +2,26 @@ body {
   background-attachment: fixed;
   top: 0;
   left: 0;
-  background-image: url("https://s-media-cache-ak0.pinimg.com/originals/a0/e0/a2/a0e0a24d40014ee6f148dc60029f448c.jpg");
+  background-image: url('http://i.imgur.com/TnRy3ES.jpg');
+  /*background-image: url('http://i.imgur.com/RIbQ4b0.png');*/
+  /*background-image: url("https://s-media-cache-ak0.pinimg.com/originals/a0/e0/a2/a0e0a24d40014ee6f148dc60029f448c.jpg");*/
   background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
+  background-size:cover;
+  max-width: 100%;
+  height: 100vw;
 }
 
 .section-intro {
   height: 100vh;
 }
 
-.section-about-me, .section-projects, .section-skills {
+.section-about-me, .section-projects, .section-skills, .section-contact {
   height: 100vh;
   background-color: #e0e0e0;
 }
 
 .section-contact {
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .section-title {
@@ -41,7 +42,6 @@ body {
 .title-triangle {
   width: 0;
   height: 0;
-
   border-top: solid transparent 29px;
   border-right: solid #ffe76e 29px;
   border-bottom: solid #ffe76e 29px;
