--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,8 +2,8 @@ body {
   background-attachment: fixed;
   top: 0;
   left: 0;
-  background-image: url('http://i.imgur.com/TnRy3ES.jpg');
-  /*background-image: url('http://i.imgur.com/RIbQ4b0.png');*/
+  /*background-image: url('http://i.imgur.com/TnRy3ES.jpg');*/
+  background-image: url('http://i.imgur.com/RIbQ4b0.png');
   /*background-image: url("https://s-media-cache-ak0.pinimg.com/originals/a0/e0/a2/a0e0a24d40014ee6f148dc60029f448c.jpg");*/
   background-repeat: no-repeat;
   background-size:cover;
