--- a/stylesheets/intro.css
+++ b/stylesheets/intro.css
@@ -1,21 +1,26 @@
 .intro-quote {
   display: inline-block;
-  border:solid 3px #ffe76e;
-  margin-left:30%;
-  margin-top:17%;
-  background-color: rgba(0,0,0,0.4);
+  margin-top:40vh;
+  margin-left: 40vw;
+  z-index: 1;
+  background-color: rgba(0,0,0,0.7);
 }
-.quote {
+.introduction{
+  text-align: center;
   color: #ffe76e;
   margin:5vw;
-  font-size: 3vw;
-  font-family: 'Megrim', cursive;
+  font-size: 4vw;
+  font-family:'Josefin Sans', sans-serif;
   font-weight: 100;
 }
 
 @media screen and (max-width: 1300px) {
-  .quote {
-    /*font-size: 2vw;*/
+  .introduction{
     margin: 4vw;
   }
+}
+
+.my-name {
+  font-weight: 800;
+  font-size: 6vw;
 }
