--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -11,6 +11,7 @@
   border-bottom: solid transparent 220px;
   border-left: solid #ffe76e 220px;
   transition: 0.9s;
+  z-index: 100;
 }
 
 .navigation-display {
