--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -2,7 +2,7 @@
 .contact-text {
   line-height:60px;
   letter-spacing: 4px;
-  top:20vh;
+  top:10vh;
   left:30vw;
   width: 40vw;
   position: relative;
@@ -27,5 +27,5 @@ margin-top:20px;
 }
 
 .social-media .fa:hover {
-  transform: scale(1.3);;
+  transform: scale(1.3);
 }
