--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -29,3 +29,12 @@ margin-top:20px;
 .social-media .fa:hover {
   transform: scale(1.3);
 }
+
+
+
+@media screen and (max-width: 920px){
+  .contact-text {
+    font-size: 20px;
+    color:red;
+  }
+}
